@@ -1,3 +1,7 @@
+2003-07-22  Tim Waugh  <twaugh@redhat.com>
+	* src/plugins/WriteGedcom.py, src/plugins/gedcomexport.glade: New
+	option for obscuring names of living people.
+
 2003-07-21  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/Sources.py: sort sources by title
 
